jena-shex/src/test/files/shexTest/negativeStructure/ExtendsWithOr1.shex
# An shape expr with extends should be a Shape or ShapeAnd
<http://a.example/S1> {<a> .}
<http://a.example/S2> EXTENDS @<http://a.example/S1> {} OR {<b> .}

